--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	 <h1>My Favorite Animal: Dog</h1>
+    <img src="Photo by Tanika: https://www.pexels.com/photo/brown-pomeranian-puppy-on-grey-concrete-floor-3687770/" alt="A happy dog playing in a park" />
     <script type="text/javascript" src="./script.js">
 </script>
 
